--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Campus Connect</string>
 
+    <string name="inter_punct">\u2022</string>
+<!--    <string name="date_and_time">5:16 am \u2022 13 Apr 22</string>-->
+
     <string-array name="Department">
         <item>Computer Science</item>
         <item>Bio Informatics</item>
