- Event Fragment done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string-array name="Hostel">
         <item>Sri Aurobindo</item>
         <item>Kalidas</item>
-        <item>C.V. Raman</item>
+        <item>CV Raman</item>
         <item>Kabirdas</item>
         <item>Kamban</item>
         <item>Tagore</item>
